--- a/vlp.conf
+++ b/vlp.conf
@@ -1,4 +1,4 @@
-hostname = nomo.dafork.com, *.kuwo.cn, tagit.hyhuo.com, *.baidu.com, gw.aoscdn.com, buy.itunes.apple.com, ap?.bilibili.com, notability.com, buy.itunes.apple.com, mp.weixin.qq.com, *.snssdk.com, api.revenuecat.com, api.rr.tv, sub.store, apiios_dq.xiangha.com, appweb_dq.xiangha.com, *.wtzw.com, api.infzm.com, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, i.weread.qq.com, 101*.*.*,116.*.*.*,117.*.*.*,120.*.*.*,121.*.*.*,140.*.*.*,183.*.*.*,203*.*.*, vira.llsapp.com, api.account.meitu.com, api.meiyan.com, bt.flashdown365.com, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, apiios.xiangha.com, buy.itunes.apple.com,
+hostname = nomo.dafork.com, *.kuwo.cn, tagit.hyhuo.com, *.baidu.com, gw.aoscdn.com, buy.itunes.apple.com, ap?.bilibili.com, notability.com, buy.itunes.apple.com, mp.weixin.qq.com, *.snssdk.com, api.revenuecat.com, api.rr.tv, sub.store, apiios_dq.xiangha.com, appweb_dq.xiangha.com, *.wtzw.com, api.infzm.com, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, i.weread.qq.com, 101*.*.*,116.*.*.*,117.*.*.*,120.*.*.*,121.*.*.*,140.*.*.*,183.*.*.*,203*.*.*, vira.llsapp.com, api.account.meitu.com, api.meiyan.com, bt.flashdown365.com, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, apiios.xiangha.com, buy.itunes.apple.com, server.yoyiapp.com, 
 
  # > NOMO CAM 解锁订阅
 ^https?:\/\/nomo\.dafork\.com\/api\/v3\/register\/phone_signin$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/NoMoCamProCrack.js
@@ -90,3 +90,6 @@ hostname = nomo.dafork.com, *.kuwo.cn, tagit.hyhuo.com, *.baidu.com, gw.aoscdn.c
 
 # > TextEditor(2022.01.21)
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/TextEditor.js
+
+# > FIMO解锁全部胶卷
+^https?:\/\/server\.yoyiapp\.com\/fimo-user\/apple\/certificate$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/FiMoCameraProCrack.js
