--- a/vlp.conf
+++ b/vlp.conf
@@ -1,4 +1,4 @@
-hostname = nomo.dafork.com, *.kuwo.cn, tagit.hyhuo.com, *.baidu.com, gw.aoscdn.com, buy.itunes.apple.com, ap?.bilibili.com, notability.com, buy.itunes.apple.com, mp.weixin.qq.com, *.snssdk.com, api.revenuecat.com, api.rr.tv, sub.store, apiios_dq.xiangha.com, appweb_dq.xiangha.com, *.wtzw.com, api.infzm.com, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, i.weread.qq.com, 101*.*.*,116.*.*.*,117.*.*.*,120.*.*.*,121.*.*.*,140.*.*.*,183.*.*.*,203*.*.*, vira.llsapp.com, api.account.meitu.com, api.meiyan.com, bt.flashdown365.com, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, apiios.xiangha.com, buy.itunes.apple.com, server.yoyiapp.com, 
+hostname = nomo.dafork.com, *.kuwo.cn, tagit.hyhuo.com, *.baidu.com, gw.aoscdn.com, buy.itunes.apple.com, ap?.bilibili.com, notability.com, buy.itunes.apple.com, mp.weixin.qq.com, *.snssdk.com, api.revenuecat.com, api.rr.tv, sub.store, apiios_dq.xiangha.com, appweb_dq.xiangha.com, *.wtzw.com, api.infzm.com, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, i.weread.qq.com, 101*.*.*,116.*.*.*,117.*.*.*,120.*.*.*,121.*.*.*,140.*.*.*,183.*.*.*,203*.*.*, vira.llsapp.com, api.account.meitu.com, api.meiyan.com, bt.flashdown365.com, apiios.xiangha.com, buy.itunes.apple.com, server.yoyiapp.com, *.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,
 
  # > NOMO CAM 解锁订阅
 ^https?:\/\/nomo\.dafork\.com\/api\/v3\/register\/phone_signin$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/NoMoCamProCrack.js
@@ -73,18 +73,6 @@ hostname = nomo.dafork.com, *.kuwo.cn, tagit.hyhuo.com, *.baidu.com, gw.aoscdn.c
 # > 闪电下载(2022.01.17)
 ^https?:\/\/bt\.flashdown365\.com\/resource2\?data\=\w{0,500}$ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/ShanDianXiaZai.js
 
-# YouTube ADS
-^https?:\/\/.+\.googlevideo\.com\/.+&oad url reject-img
-^https?:\/\/.+\.googlevideo\.com\/.+ctier url reject-img
-^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+ad_ url reject-img
-^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+log_ url reject-img
-^https?:\/\/.+\.youtube\.com\/get_midroll_ url reject-img
-^https?:\/\/premiumyva\.appspot\.com\/vmclickstoadvertisersite url reject-img
-^https?:\/\/.+\.youtube\.com\/api\/stats\/ads url reject-img
-^https?:\/\/.+\.youtube\.com\/api\/stats\/.+adformat url reject-img
-^https?:\/\/.+\.youtube\.com\/pagead\/ url reject-img
-^https?:\/\/.+\.youtube\.com\/ptracking url reject-img
-
 # > 香哈菜谱(2022.01.19)
 ^https?:\/\/apiios\.xiangha\.com\/main\d+\/ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/XiangHaCaiPu.js
 
@@ -93,3 +81,11 @@ hostname = nomo.dafork.com, *.kuwo.cn, tagit.hyhuo.com, *.baidu.com, gw.aoscdn.c
 
 # > FIMO解锁全部胶卷
 ^https?:\/\/server\.yoyiapp\.com\/fimo-user\/apple\/certificate$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/FiMoCameraProCrack.js
+
+#YouTube去广告
+(^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+)&ctier=L(&.+) url 302 $1&ctier=A$2
+^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad url reject
+
+^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads url reject
+^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) url reject
+^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext url reject
