--- a/vlp.conf
+++ b/vlp.conf
@@ -1,4 +1,4 @@
-hostname = nomo.dafork.com, *.kuwo.cn, tagit.hyhuo.com, *.baidu.com, gw.aoscdn.com, buy.itunes.apple.com, ap?.bilibili.com, notability.com, buy.itunes.apple.com, mp.weixin.qq.com, *.snssdk.com, api.revenuecat.com, api.rr.tv, sub.store, apiios_dq.xiangha.com, appweb_dq.xiangha.com, *.wtzw.com, api.infzm.com, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, i.weread.qq.com, 101*.*.*,116.*.*.*,117.*.*.*,120.*.*.*,121.*.*.*,140.*.*.*,183.*.*.*,203*.*.*, vira.llsapp.com, api.account.meitu.com, api.meiyan.com, bt.flashdown365.com, apiios.xiangha.com, buy.itunes.apple.com, server.yoyiapp.com, *.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,
+hostname = nomo.dafork.com, *.kuwo.cn, tagit.hyhuo.com, *.baidu.com, gw.aoscdn.com, buy.itunes.apple.com, ap?.bilibili.com, notability.com, buy.itunes.apple.com, mp.weixin.qq.com, *.snssdk.com, api.revenuecat.com, api.rr.tv, sub.store, apiios_dq.xiangha.com, appweb_dq.xiangha.com, *.wtzw.com, api.infzm.com, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, i.weread.qq.com, 101*.*.*,116.*.*.*,117.*.*.*,120.*.*.*,121.*.*.*,140.*.*.*,183.*.*.*,203*.*.*, vira.llsapp.com, api.account.meitu.com, api.meiyan.com, bt.flashdown365.com, apiios.xiangha.com, buy.itunes.apple.com, server.yoyiapp.com,
 
  # > NOMO CAM 解锁订阅
 ^https?:\/\/nomo\.dafork\.com\/api\/v3\/register\/phone_signin$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/NoMoCamProCrack.js
@@ -81,11 +81,3 @@ hostname = nomo.dafork.com, *.kuwo.cn, tagit.hyhuo.com, *.baidu.com, gw.aoscdn.c
 
 # > FIMO解锁全部胶卷
 ^https?:\/\/server\.yoyiapp\.com\/fimo-user\/apple\/certificate$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/FiMoCameraProCrack.js
-
-#YouTube去广告
-(^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+)&ctier=L(&.+) url 302 $1&ctier=A$2
-^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad url reject
-
-^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads url reject
-^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) url reject
-^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext url reject
